[project]
name = "context-libra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ja-sentence-segmenter>=0.0.2",
    "markitdown>=0.1.3",
    "numpy>=2.3.4",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "simsimd>=6.5.3",
]
