[project]
name = "context-libra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gliner>=0.2.22",
    "ja-sentence-segmenter>=0.0.2",
    "json-repair>=0.53.0",
    "markitdown>=0.1.3",
    "numpy>=2.3.4",
    "ollama>=0.6.1",
    "openai>=2.8.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "ranx>=0.3.21",
    "sentence-transformers>=5.1.2",
    "simsimd>=6.5.3",
    "yurenizer>=0.2.2",
]
